# cosmos-sdk

./: README.md  pyproject.toml
cosmos_sdk/: __init__.py  base.py  client.py  compat.py
cosmos_sdk/_internal/: __init__.py  api.py  types.py
cosmos_sdk/action/: __init__.py  context.py  operations.py
cosmos_sdk/codegen/: __init__.py  cli.py  generator.py  link_generator.py  object_generator.py
cosmos_sdk/dataset/: __init__.py  api.py  auth.py  client.py  connection.py  errors.py  handle.py  types.py
cosmos_sdk/object_action/: __init__.py  context.py  operations.py
cosmos_sdk/objects/: __init__.py  customer.py  order.py  product.py
cosmos_sdk/spark/: __init__.py  client.py  object_set.py
examples/: 01_basic_usage.py  02_filtering_and_search.py  03_links_and_traversal.py  04_aggregations.py  05_updates_and_actions.py  06_legacy_compatibility.py  README.md
