[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmos-sdk"
version = "0.1.0"
description = "Python SDK for Cosmos Object Graph"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Cosmos Team" }
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "polars>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
cosmos-codegen = "cosmos_sdk.codegen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cosmos_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
